--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <address>
           <a href="http://kirtan.tumblr.com">✎kirtan</a>
         </address>
+		<address>
+          <a href="http://rdio.com/people/kirtan/">♪ kirtan</a>
+        </address>
       </div>
       <div class="block">
         <div class="copy">
