--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <div class="content">
       <div class="block">
         <address>
-          <a href="http://twitter.com/kirtan">@kirtan</a>
+          <a href="http://twitter.com/kirtan">@ kirtan</a>
         </address>
 		<address>
-	      <a href="http://instagr.am/kirtan">▣kirtan</a>
+	      <a href="http://instagr.am/kirtan">▣ kirtan</a>
 	    </address>
         <address>
-          <a href="http://kirtan.tumblr.com">✎kirtan</a>
+          <a href="http://kirtan.tumblr.com">✎ kirtan</a>
         </address>
 		<address>
-          <a href="http://rdio.com/people/kirtan/">♪ kirtan</a>
+          <a href="http://rdio.com/people/kirtan/">♪&nbsp; kirtan</a>
         </address>
       </div>
       <div class="block">
         <div class="copy">
 
-          © 2013. No rights reserved.
+          © 2014. No rights reserved.
         </div>
       </div>
     </div>
