--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           <a href="http://twitter.com/kirtan">@ kirtan</a>
         </address>
 		<address>
-	      <a href="http://instagr.am/kirtan">▣ kirtan</a>
+	      <a href="http://instagram.com/kirtan">▣ kirtan</a>
 	    </address>
-        <address>
-          <a href="http://kirtan.tumblr.com">✎ kirtan</a>
-        </address>
 		<address>
           <a href="http://rdio.com/people/kirtan/">♪&nbsp; kirtan</a>
+        </address>
+        <address>
+          <a href="http://kirtan.tumblr.com">✎ kirtan</a>
         </address>
       </div>
       <div class="block">
