--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	      <a href="http://instagram.com/kirtan">▣ kirtan</a>
 	    </address>
 		<address>
-          <a href="http://rdio.com/people/kirtan/">&nbsp;♪&nbsp;&nbsp;kirtan</a>
+          <a href="http://rdio.com/people/kirtan/">&nbsp;♪&nbsp; kirtan</a>
         </address>
         <address>
           <a href="http://kirtan.tumblr.com">✎ kirtan</a>
