--- a/art/index.html
+++ b/art/index.html
@@ -34,7 +34,7 @@ h1 {
 		<p><a href="http://home.nyc.gov/html/dot/summerstreets/html/route/art-performance.shtml" target="_blank"><strike>Rafael Lozano-Hemmer - Voice Tunnel</a></strike></p>
 		<p><a href="http://www.moma.org/visit/calendar/exhibitions/1379" target="_blank">MoMA - Soundings: A Contemporary Score</a></p>
 		<p><a href="http://www.mofad.org" target="_blank">The Museum of Food and Drink - The Puffing Gun</a></p>
-		<p><a href="http://www.projectdarshan.com" target="_blank">The Darshan Project - Manjari Sharma</a> (Backed on <a href="http://www.kickstarter.com/projects/637783296/darshan-photographic-series-on-indian-deities" target="_blank">Kickstarter</a>!)</p>
+		<p><a href="http://www.projectdarshan.com" target="_blank">The Darshan Project - Manjari Sharma</a></p>
 		<p><a href="http://gettystation.com" target="_blank"><strike>Getty Station - The Sheep Station</a></strike></p>
 		<p><a href="http://www.friedmanbenda.com/current/" target="_blank">Fried Manbenda - Paul Cocksedge: CAPTURE</a></p>
 		<p><a href="http://whitney.org/Exhibitions/TJWilcox" target="_blank">T. J. Wilcox - In the Air</a></p>
