--- a/index.html
+++ b/index.html
@@ -15,17 +15,15 @@
         <address>
           <a href="http://twitter.com/kirtan">@ kirtan</a>
         </address>
-        <address>
-          <a href="http://kirtan.tumblr.com">✎ kirtan</a>
-        </address>
 		<address>
 	      <a href="http://instagram.com/kirtan">▣ kirtan</a>
 	    </address>
+        <address>
+          <a href="http://kirtan.tumblr.com">✎ kirtan</a>
+        </address>
       </div>
       <div class="block">
-        <div class="copy">
-
-          © 2014. No rights reserved.
+        <div class="copy"><a href="http://theamericanscholar.org/joyas-volardores/">"We open windows to each but we live alone in the house of the heart."</a>
         </div>
       </div>
     </div>
