--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </address>
       </div>
       <div class="block">
-        <div class="copy"><a href="http://theamericanscholar.org/joyas-volardores/">"We open windows to each but we live alone in the house of the heart."</a>
+        <div class="copy">
+	<a href="http://theamericanscholar.org/joyas-volardores/">"We open windows to each but we live alone in the house of the heart."</a>
         </div>
       </div>
     </div>
