--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="block">
         <div class="copy">
-	<a href="http://theamericanscholar.org/joyas-volardores/">"We open windows to each but we live alone in the house of the heart."</a>
+	<a href="http://theamericanscholar.org/joyas-volardores/">"We open windows to each other but we live alone in the house of the heart."</a>
         </div>
       </div>
     </div>
