focus media 4lyfe

--- a/focusmedia/team/index.html
+++ b/focusmedia/team/index.html
@@ -37,14 +37,14 @@
         		<li class="clearfix">
         			<img src="./files/akash.jpg" class="face">
         		  <h2>Akash Patel - CTO</h2>
-        			<p>Akash held strategy roles at Shayona and advised companies such as "that harmonium company" and Taco Bell. He also, invented the very popular command "F12" which solves every technology problem you will ever have.<a href="http://twitter.com/AkashDirk41">Twitter</a></p>
+        			<p>Akash invented the very popular command "F12" which solves every technology problem you will ever have.<a href="http://twitter.com/AkashDirk41">Twitter</a></p>
         		</li>
                 
                 <li class="clearfix">
         			<img src="./files/money.jpg" class="face">
         		  <h2>Anirudh "Moneyrudh" Rao - CFO</h2>
-        			<p>Anirudh is Co-Founder and Chief Engineer of YouTube and a manager of a liquor store. He is also a member of Moneyrudh Group LLC, and Chairman of Twitter. Oh swerve.
-        <a href="http://twitter.com/moneyrudh">FOLLOW ME BITCHES</a>
+        			<p>Anirudh is Co-Founder and Chief Engineer of YouTube and a manager of a liquor store. He is also a member of Moneyrudh Group LLC. Oh swerve.
+        <a href="http://twitter.com/moneyrudh">FOLLOW ME</a>
         </p>
         		</li>
 
@@ -76,6 +76,9 @@
                     <ul>
 <li><b>Birthdays</li>
 <li>Weddings</li>
+<li>Sweet Sixteens</li>
+<li>Bar and Bat Mitzvahs</li>
+<li>Births</li>
 <li>Funerals</b></li>
     		
         </div>
