--- a/art/index.html
+++ b/art/index.html
@@ -40,6 +40,6 @@ h1 {
 		<p><a href="http://whitney.org/Exhibitions/TJWilcox" target="_blank">T. J. Wilcox - In the Air</a></p>
 		<p><a href="http://www.newmuseum.org/exhibitions/view/chris-burden-extreme-measures" target="_blank">Chris Burden - Extreme Measures</a></p>
 		<p><a href="http://www.davidzwirner.com/exhibition/yayoi-kusama-9/" target="_blank">Yayoi Kusama - I Who Have Arrived In Heaven</a></p>
-		<p><a href="http://designandviolence.moma.org/" target="_blank">MoMA - Design and Violencen</a></p>
+		<p><a href="http://designandviolence.moma.org/" target="_blank">MoMA - Design and Violence</a></p>
 		<h1></h1>		
 </body></html>
