--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <address>
           <a href="http://twitter.com/kirtan">@ kirtan</a>
         </address>
+		mixpanel.track("Video play");
+
 		<address>
 	      <a href="http://instagram.com/kirtan">▣ kirtan</a>
 	    </address>
