new homepage qupte

--- a/art/index.html
+++ b/art/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Art List</title>
+		<title>AartiTime</title>
 		</head>
 		<style>
 body {
 	padding: 0px 0 0 0;
 	background: #dfe1e3;
 	text-shadow: 0 1px 2px #fdfdfd;
-	text-align: center;
-	font-size: 18px;
+	text-align: center; 
+	font-size: 28px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #363a4f;
 }
@@ -20,26 +20,10 @@ h1 {
 }		
 		</style>
 	</head>
-		<h1></h1>
-	
-		<h1>Art that I'll hopefully understand.</h1>
-		<p><a href="http://www.armoryonpark.org/programs_events/detail/ann_hamilton/" target="_blank"><strike>Anne Hamilton - The Event of a Thread</a></strike></p>
-		<p><a href="http://www.madisonsquarepark.org/things-to-do/calendar/mad-sq-art-orly-genger" target="_blank"><strike>Orly Genger - Red, Yellow and Blue</a></strike></p>
-		<p><a href="http://www.moma.org/visit/calendar/exhibitions/1380" target="_blank"><strike>Random International - Rain Room</a></strike></p>
-		<p><a href="http://www.discoverytsx.com/exhibitions/art-of-the-brick" target="_blank">Nathan Sawaya - The Art of the Brick</a></p>
-		<p><a href="http://mmuseumm.com" target="_blank"><strike>Museum - The World's Smallest Museum</a></strike></p>
-		<p><a href="http://www.juddfoundation.org" target="_blank">Donald Judd - 101 Spring St.</a></p>
-		<p><a href="http://www.guggenheim.org/new-york/exhibitions/on-view/james-turrell" target="_blank"><strike>James Turrell - Guggenheim</a></strike></p>
-		<p><a href="http://www.diaart.org/sites/main/earthroom" target="_blank"><strike>Walter De Maria - Earth Room</a></strike></p>
-		<p><a href="http://home.nyc.gov/html/dot/summerstreets/html/route/art-performance.shtml" target="_blank"><strike>Rafael Lozano-Hemmer - Voice Tunnel</a></strike></p>
-		<p><a href="http://www.moma.org/visit/calendar/exhibitions/1379" target="_blank">MoMA - Soundings: A Contemporary Score</a></p>
-		<p><a href="http://www.mofad.org" target="_blank">The Museum of Food and Drink - The Puffing Gun</a></p>
-		<p><a href="http://www.projectdarshan.com" target="_blank">The Darshan Project - Manjari Sharma</a></p>
-		<p><a href="http://gettystation.com" target="_blank"><strike>Getty Station - The Sheep Station</a></strike></p>
-		<p><a href="http://www.friedmanbenda.com/current/" target="_blank">Fried Manbenda - Paul Cocksedge: CAPTURE</a></p>
-		<p><a href="http://whitney.org/Exhibitions/TJWilcox" target="_blank">T. J. Wilcox - In the Air</a></p>
-		<p><a href="http://www.newmuseum.org/exhibitions/view/chris-burden-extreme-measures" target="_blank">Chris Burden - Extreme Measures</a></p>
-		<p><a href="http://www.davidzwirner.com/exhibition/yayoi-kusama-9/" target="_blank">Yayoi Kusama - I Who Have Arrived In Heaven</a></p>
-		<p><a href="http://designandviolence.moma.org/" target="_blank">MoMA - Design and Violence</a></p>
-		<h1></h1>		
+		<h1>Aarti Times</h1>
+		<p>Mangala ~ 6:00 am</p>
+		<p>Shangar ~ 7:30 am</p>
+		<p>Rajbhog ~ 11:30 am</p>
+		<p>Sandhya ~ 7:00 pm</p>
+		<p>Shayan ~ 7:30 pm</p>
 </body></html>
