--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="block">
         <div class="copy">
-	<a href="http://theamericanscholar.org/joyas-volardores/">"We open windows to each other but we live alone in the house of the heart."</a>
+	<a href="http://8east4west.tumblr.com">"my great grandfather worked in a factory so my grandfather could be a teacher, my grandfather was a teacher so my father could be a lawyer, my father was a lawyer so i could be an artist."</a>
         </div>
       </div>
     </div>
