--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		line-height: 1.5em;
 	}
 	#links {
-			font-size: 12px;
+			font-size: 14px;
 
 	}
 	a {
@@ -66,7 +66,7 @@
 		<div id="intro">
 		
 		<div id="links">
-			<a href="http://twitter.com/kirtan">Twitter</a> / <a href="http://instagram.com/kirtan">Instagram</a> / <a href="http://kirtan.tumblr.com">Tumblr</a> / <a id="e" href="mailto:me@thekirtan.com">me@thekirtan.com</a>
+			<a href="http://twitter.com/kirtan">Thoughts</a> / <a href="http://instagram.com/kirtan">Photos</a> / <a href="http://kirtan.tumblr.com">Scraps</a> / <a id="e" href="mailto:me@thekirtan.com">me@thekirtan.com</a>
 		</div>
 		</div>
 		
