--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 		<div id="intro">
 		
 		<div id="links">
-			<a href="http://twitter.com/kirtan">Thoughts</a> / <a href="http://instagram.com/kirtan">Photos</a> / <a href="http://kirtan.tumblr.com">Scraps</a> / <a id="e" href="mailto:me@thekirtan.com">me@thekirtan.com</a>
+			<a href="http://twitter.com/kirtan">Thoughts</a> / <a href="http://instagram.com/kirtan">Photos</a> / <a
+href="http://dribbble.com/kirtan">Design</a> / <a href="http://kirtan.tumblr.com">Scraps</a> / <a id="e" href="mailto:me@thekirtan.com">me@thekirtan.com</a>
 		</div>
 		</div>
 		
