--- a/arti/index.html
+++ b/arti/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>AartiTime</title>
+		<title>Aarti Times</title>
 		</head>
 		<style>
 body {
