--- a/index.html
+++ b/index.html
@@ -1,48 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="eng" lang="eng"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Kirtan Patel</title>
-    <link rel="shortcut icon" href="/favicon.ico"/>
-	
-	
-<style type="text/css" media="screen">
-	
-@font-face {
-	font-family: 'CallunaRegular';
-	src: url('splash_fonts/calluna-regular-webfont.eot');
-	src: local('☺'), url('splash_fonts/calluna-regular-webfont.woff') format('woff'), url('splash_fonts/calluna-regular-webfont.ttf') format('truetype'), url('splash_fonts/calluna-regular-webfont.svg#webfontgRKMYLQ0') format('svg');
-	font-weight: normal;
-	font-style: normal;
-	}
+<!DOCTYPE html>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Kirtan Patel</title>
+  <meta name="viewport" content="width=device-width">
+<meta property="twitter:account_id" content="14577999" />
+  <link rel="stylesheet" href="./sitefiles/style.css">
+  <link rel="shortcut icon" href="/sitefiles/favicon.ico"/>
 
-	body {
-		background-color:#000;
-		color:#fff;
-		font-family: 'CallunaRegular','Calluna', Georgia, Times, serif;
-		-webkit-font-smoothing: antialiased;
-		font-size-adjust: 0.45;
-	}
-	#intro {
-		position: absolute;
-		top: 195px;
-		left: 87px;
-		width:350px;
-		font-size: 24px;	
-		line-height: 1.5em;
-	}
-	#links {
-			font-size: 14px;
-
-	}
-	a {
-		color:#999;
-		text-decoration:none;
-	}
-	a:hover {
-		color:#666;
-		text-decoration:none;
-	}
-	
-</style>
+</head><style type="text/css"></style>
+<body>
+  <div class="container">
+    <div class="content">
+      <div class="block">
+        <address>
+          <a href="http://twitter.com/kirtan">@ kirtan</a>
+        </address>
+		<address>
+	      <a href="http://instagram.com/kirtan">▣ kirtan</a>
+	    </address>
+        <address>
+          <a href="http://kirtan.tumblr.com">✎ kirtan</a>
+        </address>
+      </div>
+      <div class="block">
+        <div class="copy">
+	<a href="http://8east4west.tumblr.com">"my great grandfather worked in a factory so my grandfather could be a teacher, my grandfather was a teacher so my father could be a lawyer, my father was a lawyer so i could be an artist."</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <script type="text/javascript">
 
@@ -57,20 +43,5 @@
   })();
 
 </script>
-	
-	
-	</head>
-	<body>
-		
-		<div id="intro">
-		
-		<div id="links">
-			<a href="http://twitter.com/kirtan">Thoughts</a> / <a href="http://instagram.com/kirtan">Photos</a> / <a
-href="http://dribbble.com/kirtan">Design</a> / <a href="http://kirtan.tumblr.com">Scraps</a> / <a id="e" href="mailto:me@thekirtan.com">me@thekirtan.com</a>
-		</div>
-		</div>
-		
-		
-	
-		
+
 </body></html>
