--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Kirtan Patel</title>
   <meta name="viewport" content="width=device-width">
 <meta property="twitter:account_id" content="14577999" />
-  <link rel="stylesheet" href="/sitefiles/style.css">
-  <link rel="shortcut icon" href="/sitefiles/favicon.ico"/>
+  <link rel="stylesheet" href="./sitefiles/style.css">
+  <link rel="shortcut icon" href="./sitefiles/favicon.ico"/>
 
 </head><style type="text/css"></style>
 <body>
