--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
 <meta property="twitter:account_id" content="14577999" />
   <link rel="stylesheet" href="./style.css">
-  <link rel="shortcut icon" href="/favicon.ico"/>
+  <link rel="shortcut icon" href="./favicon.ico"/>
 
 </head><style type="text/css"></style>
 <body>
