--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 @font-face {
 	font-family: 'CallunaRegular';
 	src: url('splash_fonts/calluna-regular-webfont.eot');
-	src: local('☺'), url('splash_fonts/calluna-regular-webfont.woff') format('woff'), url('splash_fonts/calluna-regular-webfont.ttf') format('truetype'), url('splash_fonts/calluna-regular-webfont.svg') format('svg');
+	src: local('☺'), url('splash_fonts/calluna-regular-webfont.woff') format('woff'), url('splash_fonts/calluna-regular-webfont.ttf') format('truetype'), url('splash_fonts/calluna-regular-webfont.svg#webfontgRKMYLQ0') format('svg');
 	font-weight: normal;
 	font-style: normal;
 	}
@@ -69,5 +69,8 @@
 href="http://dribbble.com/kirtan">Design</a> / <a href="http://kirtan.tumblr.com">Scraps</a> / <a id="e" href="mailto:me@thekirtan.com">me@thekirtan.com</a>
 		</div>
 		</div>
+		
+		
+	
 		
 </body></html>
