--- a/arti/index.html
+++ b/arti/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Aarti Times</title>
+		<title>Arti Times</title>
 		</head>
 		<style>
 body {
@@ -20,7 +20,7 @@ h1 {
 }		
 		</style>
 	</head>
-		<h1>Aarti Times</h1>
+		<h1>Arti Times</h1>
 		<p>Mangala ~ 6:00 am</p>
 		<p>Shangar ~ 7:30 am</p>
 		<p>Rajbhog ~ 11:30 am</p>
