--- a/index.html
+++ b/index.html
@@ -42,22 +42,7 @@
 		text-decoration:none;
 	}
 	
-</style>
-
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-16243518-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-	
+</style>	
 	
 	</head>
 	<body>
@@ -65,7 +50,7 @@
 		<div id="intro">
 		
 		<div id="links">
-			<a href="http://twitter.com/kirtan">Thoughts</a> / <a href="http://instagram.com/kirtan">Photos</a> / <a href="http://kirtan.tumblr.com">Scraps</a> / <a id="e" href="mailto:me@thekirtan.com">me@thekirtan.com</a>
+			<a href="http://twitter.com/kirtan">Thoughts</a> / <a href="http://instagram.com/kirtan">Photos</a> / <a href="http://kirtan.tumblr.com">Scraps</a> / <a id="e" href="mailto:me@kirtan.co">me@kirtan.co</a>
 		</div>
 		</div>
 		
