--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		line-height: 1.5em;
 	}
 	#links {
-			font-size: 14px;
+			font-size: 20px;
 
 	}
 	a {
@@ -50,7 +50,7 @@
 		<div id="intro">
 		
 		<div id="links">
-			<a href="http://twitter.com/kirtan">Thoughts</a> / <a href="http://instagram.com/kirtan">Photos</a> / <a href="http://kirtan.tumblr.com">Scraps</a> / <a id="e" href="mailto:me@kirtan.co">me@kirtan.co</a>
+			<a href="http://twitter.com/kirtan">Thoughts</a> / <a href="http://instagram.com/kirtan">Memories</a> / <a href="http://kirtan.tumblr.com">Scraps</a> <a id="e" href="mailto:me@kirtan.co">me@kirtan.co</a>
 		</div>
 		</div>
 		
