added new places

--- a/travel/index.html
+++ b/travel/index.html
@@ -96,6 +96,30 @@ areas :
 	{
 		"id": "IN",
 		"showAsSelected": true
+	},
+	{
+		"id": "JP",
+		"showAsSelected": true
+	},
+	{
+		"id": "HK",
+		"showAsSelected": true
+	},
+	{
+		"id": "SG",
+		"showAsSelected": true
+	},
+	{
+		"id": "AU",
+		"showAsSelected": true
+	},
+	{
+		"id": "NZ",
+		"showAsSelected": true
+	},
+	{
+		"id": "MO",
+		"showAsSelected": true
 	}
 ]
 },
