--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div id="intro">
 		કીર્તન પટેલ
 		<div id="links">
-			<a href="https://twitter.com/kirtan">twitter</a> / <a id="e" href="mailto:me@kirtan.co?subject=Hey!">email</a>
+			<a href="https://twitter.com/kirtan">twitter</a> / <a id="e" href="mailto:me@thekirtan.com?subject=Hey!">email</a>
 		</div>
 		</div>
 		
