--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div id="intro">
 		કીર્તન પટેલ
 		<div id="links">
-			<a href="https://twitter.com/kirtan">twitter</a> / <a id="e" href="https://t.me/kirtan">telegram</a>
+			<a href="https://twitter.com/kirtan">twitter</a>
 		</div>
 		</div>
 		
