--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
 		કીર્તન પટેલ
 		<div id="links">
 			<a href="https://twitter.com/kirtan">twitter</a>
+			
+			<div class="invitation-codes invitation-codes-badge1" data-type="badge1" data-product=""><a class="" href="https://invitation.codes/" data-type="badge1">use my referral codes</a></div>
+			<script async defer src="//invitation.codes/embed/user/MoQlBGUR5/embed.js"></script>
 		</div>
 		</div>
-		
-		
 	
 		
 </body></html>
