Revert "Update index.html"
This reverts commit b9983d541b5bfc2fc0148b2bf1d45fb310f697cb.

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 		
 		<div id="intro">
 		કીર્તન પટેલ
-		<div id="flags">
-		🇺🇸 ⇄ 🇸🇬
 		<div id="links">
 			<a href="https://twitter.com/kirtan">twitter</a>
-		</div>
+			
+			<div class="invitation-codes invitation-codes-badge1" data-type="badge1" data-product=""><a class="" href="https://invitation.codes/" data-type="badge1">use my referral codes</a></div>
+			<script async defer src="//invitation.codes/embed/user/MoQlBGUR5/embed.js"></script>
 		</div>
 		</div>
 	
