--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ h1 {
 		</style>
 	</head>
 		<h1>Wrong.</h1>
-		<p>Go Back to <a href="http://kirtan.co">Start</a>. Do Not Pass Go. Do not collect $200.</p>
+		<p>Go Back to <a href="https://kp.sg">Start</a>. Do Not Pass Go. Do not collect $200.</p>
 </body></html>
