--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 		<div id="intro">
 		કીર્તન પટેલ
 		<div id="links">
-			<a href="https://twitter.com/kirtan">twitter</a>			
+			<a href="https://linkedin.com/in/kirtan-patel/">linkedin</a>
+			<br>
+			<a href="https://twitter.com/kirtan">twitter</a>
+				
 		</div>
 		</div>
 	
