--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div id="links">
 			<a href="https://linkedin.com/in/kirtan-patel/">linkedin</a>
 			<br>
-			<a href="https://twitter.com/kirtan">twitter</a>
+			<a href="https://x.com/kirtan">𝕏</a>
 				
 		</div>
 		</div>
